k8s/argocd/media-setup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: media.192.168.0.240.nip.io
    http:
      paths:
        - backend:
            service:
              name: transmission-transmission-openvpn
              port:
                name: http
          path: "/transmission"
