k8s/argocd/media-setup/media-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: media
spec:
  rules:
  - host: media.192.168.0.240.nip.io
    http:
      paths:
      - path: /transmission
        pathType: Prefix
        backend:
          service:
            name: transmission-transmission-openvpn
            port:
              number: 80
